  * Document dpkg-reconfigure keyboard-configuration instead of kbd-config.
  * Add installation-guide-kfreebsd-{i386,amd64} packages.
  * Reference Debian Installer modules documentation from the preseed section
    (Closes: Bug#603159).
  * Move boot parameters subsections from inside the debian installer parameters
    section, to which they don't really belong.

  [ Joey Hess ]
  * Update USB stick documentation to reflect isohybird mini.iso files,
    as generated by debian-installer >= 20100913.

  [ Christian Perrier ]
  * Remove obsolete reference to the replicator package
    Closes: #597983

  [ Maximilian Attems ]
  * Remove obsolete reference to kernel-img.conf

  [ Colin Watson ]
  * Fix "/etc/init.d/dhcpd3-server" typo (should be
    /etc/init.d/dhcp3-server), and unfuzzy all translations (LP: #666726).

 -- Samuel Thibault <sthibault@debian.org>  Mon, 06 Sep 2010 00:56:02 +0200

installation-guide (20100518) unstable; urgency=low

  [ Colin Watson ]
  * Note that partman-auto/init_automatically_partition is only honoured if
    partman-auto/method is not set.
  * Document the use of grub-installer/grub2_instead_of_grub_legacy to
    switch back to GRUB Legacy for those who need it.
  * Remove spurious quoting in network-console documentation, pointed out by
    Jonathan Amery.
  * partman now asks a slightly different (and less scary) confirmation
    question if it doesn't appear that any data is being overwritten.
    Document the associated preseeding changes.

  [ Frans Pop ]
  * Add missing hyphen in command "kbd-config". With thanks to Tapio Lehtonen.
    Closes: #545584.
  * Include a caution in the IA64 version of the manual against using IA64
    for "normal" 64-bit Intel systems.
  * Disable the variant for the alpha architecture: it is being dropped as a
    release architecture for Squeeze.
  * When updating PO files, set them to a standard width of 79 (same as used
    for l10n-sync for D-I master PO files).