@@ -188,6 +188,6 @@ en cas que alguna cosa vagi malament.
 &module-save-logs.xml;
 &module-cdrom-checker.xml;
 &module-shell.xml;
-&module-network-console.xml;
   </sect2>
+&module-network-console.xml;
  </sect1>
