@@ -1,8 +1,8 @@
 <!-- retain these comments for translator revision tracking -->
 <!-- original version: 62714 -->
 
-   <sect3 id="network-console">
-   <title>Instal·lació a través de la xarxa</title>
+  <sect2 id="network-console">
+  <title>Instal·lació a través de la xarxa</title>
 
 <para arch="not-s390">
 
@@ -130,4 +130,4 @@ la instal·lació no finalitzi correctament.
 
 </para></warning>
 
-   </sect3>
+  </sect2>
