@@ -190,6 +190,6 @@ pokazí.
 &module-save-logs.xml;
 &module-cdrom-checker.xml;
 &module-shell.xml;
-&module-network-console.xml;
   </sect2>
+&module-network-console.xml;
  </sect1>
