@@ -1,8 +1,8 @@
 <!-- $Id$ -->
 <!-- original version: 62714 -->
 
-   <sect3 id="network-console">
-   <title>Instalace přes síť</title>
+  <sect2 id="network-console">
+  <title>Instalace přes síť</title>
 
 <para arch="not-s390">
 
@@ -130,4 +130,4 @@ instalaci nebo k problémům v novém systému.
 
 </para></warning>
 
-   </sect3>
+  </sect2>
