@@ -1,8 +1,8 @@
 <!-- retain these comments for translator revision tracking -->
 <!-- original version: 62714 -->
 
-   <sect3 id="network-console">
-   <title>Installation über das Netzwerk (network-console)</title>
+  <sect2 id="network-console">
+  <title>Installation über das Netzwerk (network-console)</title>
 
 <para arch="not-s390">
 
@@ -142,4 +142,4 @@ Installation oder zu Problemen mit dem installierten System führen.
 
 </para></warning>
 
-   </sect3>
+  </sect2>
