@@ -173,7 +173,7 @@ It mostly consists of tidying up after the &d-i;.
   </sect2>
 
   <sect2 id="di-miscellaneous">
-  <title>Miscellaneous</title>
+  <title>Troubleshooting</title>
 <para>
 
 The components listed in this section are usually not involved in the
@@ -185,6 +185,6 @@ user in case something goes wrong.
 &module-save-logs.xml;
 &module-cdrom-checker.xml;
 &module-shell.xml;
-&module-network-console.xml;
   </sect2>
+&module-network-console.xml;
  </sect1>
