@@ -1,8 +1,8 @@
 <!-- retain these comments for translator revision tracking -->
 <!-- $Id$ -->
 
-   <sect3 id="network-console">
-   <title>Installation Over the Network</title>
+  <sect2 id="network-console">
+  <title>Installation Over the Network</title>
 
 <para arch="not-s390">
 
@@ -131,4 +131,4 @@ problems with the installed system.
 
 </para></warning>
 
-   </sect3>
+  </sect2>
