@@ -122,7 +122,7 @@ erabiltzailea laguntzeko zerbait gaizki joanez gero.
 &module-save-logs.xml;
 &module-cdrom-checker.xml;
 &module-shell.xml;
-&module-baseconfig.xml;
   </sect2>
+&module-network-console.xml;
  </sect1>
 
