@@ -179,7 +179,7 @@ attendent en silence que l'utilisateur ait besoin d'aide.
 &module-save-logs.xml;
 &module-cdrom-checker.xml;
 &module-shell.xml;
-&module-network-console.xml;
 
   </sect2>
+&module-network-console.xml;
  </sect1>
