@@ -1,7 +1,7 @@
 <!-- original version: 62714 -->
 
-   <sect3 id="network-console">
-   <title>Installation par le réseau</title>
+  <sect2 id="network-console">
+  <title>Installation par le réseau</title>
 
 <para arch="not-s390">
 
@@ -124,4 +124,4 @@ dans le système installé.
 
 </para></warning>
 
-   </sect3>
+  </sect2>
