@@ -301,7 +301,7 @@ aiutare l'utente nel caso che qualcosa vada storto.
 &module-save-logs.xml;
 &module-cdrom-checker.xml;
 &module-shell.xml;
-&module-network-console.xml;
 
   </sect2>
+&module-network-console.xml;
  </sect1>
