@@ -1,9 +1,9 @@
 <!-- retain these comments for translator revision tracking -->
 <!-- original version: 62714 -->
 
-   <sect3 id="network-console">
-   <!-- <title>Installation Over the Network</title> -->
-   <title>Installazione dalla rete</title>
+  <sect2 id="network-console">
+  <!-- <title>Installation Over the Network</title> -->
+  <title>Installazione dalla rete</title>
 <para arch="not-s390">
 
 <!--
@@ -257,4 +257,4 @@ dell'installazione oppure dei problemi nel sistema una volta conclusa
 l'installazione.
 
 </para></warning>
-   </sect3>
+  </sect2>
