@@ -187,6 +187,6 @@ als er iets mis gaat.
 &module-save-logs.xml;
 &module-cdrom-checker.xml;
 &module-shell.xml;
-&module-network-console.xml;
   </sect2>
+&module-network-console.xml;
  </sect1>
