@@ -1,7 +1,7 @@
 <!-- original version: 31173 -->
 
-   <sect3 id="network-console">
-   <title>Installeren over het netwerk</title>
+  <sect2 id="network-console">
+  <title>Installeren over het netwerk</title>
 
 <para arch="not-s390">
 
@@ -107,4 +107,4 @@ zal zijn dat de verbinding wordt verbroken.
 
 </para></warning>
 
-   </sect3>
+  </sect2>
