@@ -3,8 +3,8 @@
 <!-- updated 31173:56141 by Felipe Augusto van de Wiel (faw) 2008.11.10 -->
 <!-- updated 56141:62714 by Felipe Augusto van de Wiel (faw) 2010.05.17 -->
 
-   <sect3 id="network-console">
-   <title>Instalação Pela Rede</title>
+  <sect2 id="network-console">
+  <title>Instalação Pela Rede</title>
 
 <para arch="not-s390">
 
@@ -135,4 +135,4 @@ ou problemas no sistema instalado.
 
 </para></warning>
 
-   </sect3>
+  </sect2>
