@@ -42,6 +42,9 @@ installation-guide (2010xxxx) UNRELEASED; urgency=low
     (Closes: Bug#603159).
   * Move boot parameters subsections from inside the debian installer parameters
     section, to which they don't really belong.
+  * Make subsection Installation Over the Network a direct child of Using
+    Individual Components instead of hiding it in "Miscellaneous".
+  * Rename 6.3.8 "Miscellaneous" into "Troubleshooting".
 
   [ Joey Hess ]
   * Update USB stick documentation to reflect isohybird mini.iso files,
